--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -11,3 +11,8 @@ eureka:
             defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
     instance:
     preferIpAddress: true
+
+
+management.context-path: /actuator
+management.security.enabled: false
+
