ajout de produit à pertir de ui

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <module>discovery</module>
     <module>ui</module>
     <module>order</module>
+    <module>orderdto</module>
     <module>reverseproxy</module>
   </modules>
 
