--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -7,3 +7,5 @@ spring.application.name: discovery
 
 management.context-path: /actuator
 management.security.enabled: false
+
+eureka.instance.leaseRenewalIntervalInSeconds: 5
