--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>order</module>
     <module>orderdto</module>
     <module>reverseproxy</module>
+    <module>configurator</module>
   </modules>
 
   <!--<dependencies>
