--- a/ui/src/main/resources/application.yml
+++ b/ui/src/main/resources/application.yml
@@ -5,14 +5,14 @@ server:
   port: 0
   contextPath: /
 
-eureka:
-    client:
-        serviceUrl:
-            defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-    instance:
-    preferIpAddress: true
+#eureka:
+#    client:
+#        serviceUrl:
+#            defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+#    instance:
+#    preferIpAddress: true
 
-management.context-path: /actuator
-management.security.enabled: false
+#management.context-path: /actuator
+#management.security.enabled: false
 
-endpoints.sensitive: false
+#endpoints.sensitive: false
