--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -5,6 +5,9 @@ server:
   port: 0
   contextPath: /
 
+spring.profiles.active: h2
+#spring.profiles.active: mysql
+
 #eureka:
 #    client:
 #        serviceUrl:
@@ -23,23 +26,8 @@ spring.jpa.hibernate.ddl-auto: none
 #spring.datasource.password=password
 #spring.datasource.driver-class-oracle.jdbc.driver.OracleDriver
 
-# H2
-
-spring.h2.console.enabled: true
-spring.h2.console.path: /h2
-
-# Datasource
-
-spring.datasource.url: jdbc:h2:mem:test
-spring.datasource.username: sa
-spring.datasource.password:
-spring.datasource.driver-class-name: org.h2.Driver
-
 
 liquibase.change-log: classpath:/db/changelog/db.changelog-master.xml
-#liquibase.default-schema: test
-liquibase.default-schema: public
-
 
 #endpoints.actuator.path: /admin
 #management.context-path: /actuator
