--- a/ui/src/main/resources/application.yml
+++ b/ui/src/main/resources/application.yml
@@ -16,3 +16,18 @@ server:
 #management.security.enabled: false
 
 #endpoints.sensitive: false
+
+spring:
+  application:
+    name: ui
+  cloud:
+    config:
+      env: default # optional
+      label: master # optional
+    #uri: http://localhost:8888 # optional
+    #uri: http://localhost:9090/configurator
+
+
+spring.config.import: configserver:http://localhost:8888
+
+
