--- a/orderdto/pom.xml
+++ b/orderdto/pom.xml
@@ -9,8 +9,13 @@
     <parent>
         <groupId>org.ecommerce</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <maven.compiler.release>${java.version}</maven.compiler.release>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.source>17</maven.compiler.source>
+    </properties>
     
 </project>
