--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -12,7 +12,47 @@ eureka:
     instance:
     preferIpAddress: true
 
+#spring:
+#  cloud:
+#    gateway:
+#      routes:
+#      - id: baeldung_route
+#        uri: https://www.baeldung.com/
+#        predicates:
+#        - Path=/baeldung/
+#      - id: ui_route
+#        uri: http://localhost:58250/
+#        predicates:
+#          - Path=/ui/
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 management.context-path: /actuator
 management.security.enabled: false
+
+management.endpoint.gateway.enabled: true
+
+
+spring:
+  cloud:
+    gateway:
+      httpserver:
+        wiretap: true
+      httpclient:
+        wiretap: true
+
+
+logging:
+  level:
+    org.springframework.cloud.gateway: TRACE
+    org.springframework.http.server.reactive: DEBUG
+    org.springframework.web.reactive: DEBUG
+    reactor.ipc.netty: DEBUG
+    reactor.netty: DEBUG
+
+#    root: DEBUG
+
 
