ajout d'un TU pour envoyer des flux en masse sur le reverse proxy

--- a/reverseproxy/pom.xml
+++ b/reverseproxy/pom.xml
@@ -41,6 +41,13 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.ecommerce</groupId>-->
+<!--			<artifactId>orderdto</artifactId>-->
+<!--			<version>${project.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+
 	</dependencies>
 
 	<build>
