--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -8,12 +8,14 @@ server:
 spring.profiles.active: h2
 #spring.profiles.active: mysql
 
-#eureka:
+eureka:
 #    client:
 #        serviceUrl:
 #            defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 #    instance:
 #    preferIpAddress: true
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # create and drop tables and sequences, loads import.sql
 #spring.jpa.hibernate.ddl-auto: create-drop
