--- a/reverseproxy/pom.xml
+++ b/reverseproxy/pom.xml
@@ -41,12 +41,10 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
-<!--		<dependency>-->
-<!--			<groupId>org.ecommerce</groupId>-->
-<!--			<artifactId>orderdto</artifactId>-->
-<!--			<version>${project.version}</version>-->
-<!--			<scope>test</scope>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
 
 	</dependencies>
 
