--- a/configurator/config/ui/application.yml
+++ b/configurator/config/ui/application.yml
@@ -3,7 +3,8 @@ eureka:
     client:
         serviceUrl:
             defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
-    instance:
+    #instance:
+        #instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
     preferIpAddress: true
 
 management.context-path: /actuator
