--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -26,10 +26,23 @@ spring:
           - Path=/ui/**
         filters:
           - StripPrefix=1
+          - name: Retry
+            args:
+                retries: 1
+                #statuses: '*'
+                methods: GET,POST
+                backoff:
+                  firstBackoff: 10ms
+                  maxBackoff: 50ms
+                  factor: 2
+                  basedOnPreviousValue: false
       httpserver:
         wiretap: true
       httpclient:
         wiretap: true
+      metrics:
+        enabled: true
+
 management:
   endpoints:
     web:
