--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -1,3 +1,4 @@
 FROM eclipse-temurin:17
 COPY target/reverseproxy-1.0.0-SNAPSHOT.jar reverseproxy-1.0.0-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/reverseproxy-1.0.0-SNAPSHOT.jar"]
+#ENTRYPOINT ["tail", "-f", "/dev/null"]
+ENTRYPOINT ["java","-DEUREKA_URI=http://discovery:8761/eureka","-jar","/reverseproxy-1.0.0-SNAPSHOT.jar"]
