--- a/configurator/src/main/resources/application.yml
+++ b/configurator/src/main/resources/application.yml
@@ -2,6 +2,7 @@ server:
   port: 8888
   #port: 0
   contextPath: /
+  shutdown: graceful
 
 spring.application.name: configurator
 
@@ -16,5 +17,11 @@ spring:
         native:
           search-locations: file:///D:/projet/ecommerce/configurator/config
 
+
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
 
 
