--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 8761
   contextPath: /
+  shutdown: graceful
 
 spring.application.name: discovery
 
@@ -14,3 +15,11 @@ eureka:
   #client:
   #  healthcheck:
   #    enabled: true
+  #client.serviceUrl.defaultZone: http://localhost:8761/
+
+
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
