--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -4,18 +4,19 @@ spring.application.name: order
 server:
   port: 0
   contextPath: /
+  shutdown: graceful
 
 spring.profiles.active: h2
 #spring.profiles.active: mysql
 
 eureka:
-#    client:
-#        serviceUrl:
-#            defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+    client:
+        serviceUrl:
+            defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 #    instance:
 #    preferIpAddress: true
-  instance:
-    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+    instance:
+        instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 # create and drop tables and sequences, loads import.sql
 #spring.jpa.hibernate.ddl-auto: create-drop
@@ -44,8 +45,14 @@ spring:
     config:
       env: default # optional
       label: master # optional
+      fail-fast: true
     #uri: http://localhost:8888 # optional
     #uri: http://localhost:9090/configurator
 
-spring.config.import: configserver:http://localhost:8888
+spring.config.import: ${CONFIG_URI:configserver:http://localhost:8888}
 
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
