--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 server:
   port: 19090
   contextPath: /
+  shutdown: graceful
 
 spring.application.name: reverseproxy
 
@@ -48,11 +49,15 @@ management:
     web:
       exposure:
         include: '*'
+    health:
+      probes:
+        enabled: true
 
 management.context-path: /actuator
 management.security.enabled: false
 
 management.endpoint.gateway.enabled: true
+
 
 
 
