--- a/configurator/src/main/resources/application.yml
+++ b/configurator/src/main/resources/application.yml
@@ -18,6 +18,15 @@ spring:
           search-locations: file:///D:/projet/ecommerce/configurator/config
 
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+  #    instance:
+  #    preferIpAddress: true
+  instance:
+    instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
+
 management:
   endpoint:
     health:
