--- a/discovery/src/main/resources/application.yml
+++ b/discovery/src/main/resources/application.yml
@@ -16,6 +16,9 @@ eureka:
   #  healthcheck:
   #    enabled: true
   #client.serviceUrl.defaultZone: http://localhost:8761/
+  client:
+    serviceUrl:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 
 
 management:
