--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -11,6 +11,7 @@ eureka:
         serviceUrl:
             defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
     instance:
+      instance-id: ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
     preferIpAddress: true
 
 spring:
@@ -62,13 +63,13 @@ management.endpoint.gateway.enabled: true
 
 
 
-logging:
-  level:
-    org.springframework.cloud.gateway: TRACE
-    org.springframework.http.server.reactive: DEBUG
-    org.springframework.web.reactive: DEBUG
-    reactor.ipc.netty: DEBUG
-    reactor.netty: DEBUG
+#logging:
+#  level:
+#    org.springframework.cloud.gateway: TRACE
+#    org.springframework.http.server.reactive: DEBUG
+#    org.springframework.web.reactive: DEBUG
+#    reactor.ipc.netty: DEBUG
+#    reactor.netty: DEBUG
 
 #    root: DEBUG
 
