--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -56,3 +56,41 @@ management:
     health:
       probes:
         enabled: true
+      show-details: ALWAYS
+    info:
+      enabled: true
+    startup:
+      enabled: true
+    metrics:
+      enabled: true
+    mappings:
+      enabled: true
+    configprops:
+      enabled: true
+      show-values: ALWAYS
+    conditions:
+      enabled: true
+    beans:
+      enabled: true
+    httpexchanges:
+      enabled: true
+    liquibase:
+      enabled: true
+    env:
+      enabled: true
+      show-values: ALWAYS
+  endpoints:
+    web:
+      exposure:
+        include: 'info,health,startup,metrics,mappings,configprops,conditions,beans,httpexchanges,liquibase,env'
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      connect-timeout: 30s
+      read-timeout: 30s
+      endpoint: ${ZIPKIN_URI:http://localhost:9411/api/v2/spans}
+
+logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+
