--- a/reverseproxy/src/main/resources/application.yml
+++ b/reverseproxy/src/main/resources/application.yml
@@ -53,11 +53,21 @@ management:
     health:
       probes:
         enabled: true
+    gateway:
+      enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      connect-timeout: 30s
+      read-timeout: 30s
+      endpoint: ${ZIPKIN_URI:http://localhost:9411/api/v2/spans}
 
 management.context-path: /actuator
 management.security.enabled: false
 
-management.endpoint.gateway.enabled: true
+
 
 
 
@@ -72,5 +82,8 @@ management.endpoint.gateway.enabled: true
 #    reactor.netty: DEBUG
 
 #    root: DEBUG
+
+
+logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
 
