--- a/ui/src/main/resources/application.yml
+++ b/ui/src/main/resources/application.yml
@@ -41,4 +41,14 @@ management:
     health:
       probes:
         enabled: true
+  tracing:
+    sampling:
+      probability: 1.0
+  zipkin:
+    tracing:
+      connect-timeout: 30s
+      read-timeout: 30s
+      endpoint: ${ZIPKIN_URI:http://localhost:9411/api/v2/spans}
+
+logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
