ajout d'un code pour le produit, et d'une contrainte d'unicitée sur la quantité

--- a/order/src/main/resources/application.yml
+++ b/order/src/main/resources/application.yml
@@ -94,3 +94,6 @@ management:
 
 logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
+logging:
+  level:
+    liquibase: DEBUG
