--- a/ui/src/main/resources/application.yml
+++ b/ui/src/main/resources/application.yml
@@ -50,5 +50,5 @@ management:
       read-timeout: 30s
       endpoint: ${ZIPKIN_URI:http://localhost:9411/api/v2/spans}
 
-logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
+logging.pattern.level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}] [%kvp]'
 
