--- a/discovery/Dockerfile
+++ b/discovery/Dockerfile
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:21.0.7_6-jre-ubi9-minimal
-COPY target/discovery-1.1.0-SNAPSHOT.jar discovery-1.1.0-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/discovery-1.1.0-SNAPSHOT.jar"]
+FROM eclipse-temurin:25.0.1_8-jre-noble
+COPY target/discovery-1.2.0-SNAPSHOT.jar discovery-1.2.0-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","/discovery-1.2.0-SNAPSHOT.jar"]
