--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:21.0.7_6-jre-ubi9-minimal
-COPY target/order-1.1.0-SNAPSHOT.jar order-1.1.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar","/order-1.1.0-SNAPSHOT.jar", "--server.port=8080"]
+FROM eclipse-temurin:25.0.1_8-jre-noble
+COPY target/order-1.2.0-SNAPSHOT.jar order-1.2.0-SNAPSHOT.jar
+ENTRYPOINT ["java", "-jar","/order-1.2.0-SNAPSHOT.jar", "--server.port=8080"]
