--- a/reverseproxy/Dockerfile
+++ b/reverseproxy/Dockerfile
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:21.0.7_6-jre-ubi9-minimal
-COPY target/reverseproxy-1.1.0-SNAPSHOT.jar reverseproxy-1.1.0-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","/reverseproxy-1.1.0-SNAPSHOT.jar"]
+FROM eclipse-temurin:25.0.1_8-jre-noble
+COPY target/reverseproxy-1.2.0-SNAPSHOT.jar reverseproxy-1.2.0-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","/reverseproxy-1.2.0-SNAPSHOT.jar"]
