--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,3 +1,3 @@
-FROM eclipse-temurin:21.0.7_6-jre-ubi9-minimal
-COPY target/ui-1.1.0-SNAPSHOT.jar ui-1.1.0-SNAPSHOT.jar
-ENTRYPOINT ["java", "-jar","/ui-1.1.0-SNAPSHOT.jar", "--server.port=8083"]
+FROM eclipse-temurin:25.0.1_8-jre-noble
+COPY target/ui-1.2.0-SNAPSHOT.jar ui-1.2.0-SNAPSHOT.jar
+ENTRYPOINT ["java", "-jar","/ui-1.2.0-SNAPSHOT.jar", "--server.port=8083"]
