--- a/order/Dockerfile
+++ b/order/Dockerfile
@@ -1,3 +1,4 @@
 FROM eclipse-temurin:25.0.1_8-jre-noble
+RUN apt-get update && apt-get install -y curl
 COPY target/order-1.2.0-SNAPSHOT.jar order-1.2.0-SNAPSHOT.jar
 ENTRYPOINT ["java", "-jar","/order-1.2.0-SNAPSHOT.jar", "--server.port=8080"]
